samples/errors/return-func-and-int.stkn
func conflict_return(x)
    if x
        return 0
    return conflict_return@1

write(mediate_reverse(conflict_return, false))

func mediate(a, b)
    return b(a)

func mediate_reverse(a, b)
    return mediate(b, a)
